[project]
name = "caesar-decoder"
version = "0.1.0"
description = "A web scraper to make all arm64 instruction decoding tables machine-readable"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "jinja2>=3.1.6",
    "playwright>=1.58.0",
    "pyaml>=26.2.1",
    "pyyaml>=6.0.3",
]
